--- a/openshift/build-config.yaml
+++ b/openshift/build-config.yaml
@@ -1,10 +1,43 @@
+apiVersion: v1
+kind: ImageStream
+metadata:
+  name: demo
+  labels:
+    app: demo
+---
+apiVersion: v1
+kind: BuildConfig
+metadata:
+  name: demo
+  labels:
+    app: demo
+spec:
+  runPolicy: Serial
+  source:
+    type: Git
+    git:
+      uri: 'https://github.com/snuxoll/openshift-pipeline-demo.git'
+      ref: master
+  strategy:
+    type: Source
+    sourceStrategy:
+      from:
+        kind: ImageStreamTag
+        namespace: openshift
+        name: 'redhat-openjdk18-openshift:1.1'
+  output:
+    to:
+      kind: ImageStreamTag
+      name: 'demo:latest'
+---
 kind: "BuildConfig"
 apiVersion: "v1"
 metadata:
-  name: "demo"
+  name: "demo-pipeline"
 spec:
   source:
     git:
       uri: "https://github.com/snuxoll/openshift-pipeline-demo.git"
   strategy:
     jenkinsPipelineStrategy:
+      jenkinsfilePath: Jenkinsfile
