--- a/openshift/build-config.yaml
+++ b/openshift/build-config.yaml
@@ -25,6 +25,7 @@ spec:
         kind: ImageStreamTag
         namespace: openshift
         name: 'redhat-openjdk18-openshift:1.1'
+    incremental: true
   output:
     to:
       kind: ImageStreamTag
